* Version 0.7.0
  - A hook is no longer created automatically
  #+BEGIN_SRC emacs-lisp
  (add-hook 'org-mode-hook 'evil-org-mode) ;; only load with org-mode
  #+END_SRC
  This line is from now on required in a user config.
  
* Between versions 0.1.2 and 0.6.3
  - less controversial default keybindings (see issue [[https://github.com/edwtjo/evil-org-mode/issues/13][#13]])
    t, T, O and leader bindings are no longer bound by default, but can be enabled using key themes.
  - leader keys are deprecated and evil-leader is no longer required
  - customizable movement keys (as a courtesy to dvorak users)
  - operators (>, <) for promotion, demotion. Can also be used for plain indentation when in a code block
  - text objects (ae, ar, ap, as)
  - optional insert mode bindings C-d and C-t
  - table support for keys: x, X, (, ), { and }.